# ai-news-influencer

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  CLAUDE_aqe.md  README.md  docker-compose.yml  package-lock.json  package.json
.agentic-qe/: learning-config.json
.agentic-qe/data/improvement/: state.json
.agentic-qe/data/learning/: state.json
.claude/: mcp.json  settings.json  settings_mana.json
.claude/commands/: aqe-costs.md
.claude/skills/: bencium-innovative-ux-designer
.devcontainer/: devcontainer.json  install-tools.sh
backend/: .env.example  .gitignore  DEVPOD.md  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  cli.py
backend/src/agents/: __init__.py  base.py  content_selector.py  post_generator.py  response_generator.py  strategy_optimizer.py  tools.py
backend/src/api/: main.py
backend/src/api/routes/: auth.py  config.py  content.py  health.py  metrics.py
backend/src/core/: config.py  embeddings.py  logging.py  prompts.py  scheduler.py
backend/src/database/: connection.py  models.py  session.py  vector_store.py
backend/src/integrations/: __init__.py  claude.py  image_gen.py  linkedin.py  twitter_scraper.py
backend/src/services/: __init__.py  ab_testing.py  comment_monitor.py  content_pipeline.py  metrics.py  threading.py
docs/: implementation-plan.md  tasks.md  twitter-scraping-options-analysis.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/metrics/: page.tsx
frontend/app/posts/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: EngagementChart.tsx  MetricsOverview.tsx  RecentPosts.tsx  Sidebar.tsx
nginx/: nginx.conf
scripts/local-scraper/: README.md  requirements.txt  twitter_scraper_local.py
